	     pcx    ZSoft IBM PC Paintbrush file
	     pgm    PBM Portable Gray Map file
	     pic    PIXAR picture file
	     pict   Apple Macintosh QuickDraw/PICT file
	     pix    Alias image file
	     ppm    PBM Portable Pixel Map file
	     pnm    PBM Portable aNy Map file
	     ps     Adobe PostScript file
	     ras    Sun Rasterfile
	     rgb    SGI RGB image file
	     rla    Wavefront raster image file
	     rle    Utah Run length encoded image file
	     synu   SDSC Synu image file
	     tga    Truevision Targa image file
	     tiff   Tagged image file
	     viff   Khoros Visualization image file
	     x      AVS X image file
	     xbm    X11 bitmap file
	     xwd    X Window System window dump image file

	- You can find the imconv package at ftp.sdsc.edu.
	- If (width > screenwidth / 2) || (height > screenheight / 2) the image is
	  centered else it is tiled.
	- If you don't have the libim library or don't want to use it, undefine
	  IMCONV in Imakefile.


	But take care :

	- It is very memory consuming (on the server side).
	- It is very color cells consuming.
	- The ctwm executable is much larger executable.
	- Startup is much much slower (but not the workspace swap).
	- It works only for 8 planes pixmaps and 8 planes screens. If there is
	  an imconv specialist somewhere that can generelize this, he is 
	  welcome.

	

    10 - Two new functions : f.nextworkspace, f.prevworkspace.

    11 - Xpm examples files are now automatically installed in $(TWMDIR)

    12 - An example of .ctwmrc is given, showing some aspect of ctwm
	 (example.ctwmrc). It is not a complete .ctwmrc, only the ctwm
	 aspects are shown.

    13 - A new file PROBLEMS has been added that lists some problems you
	can have while using ctwm and some solutions.

 
Is there any good pixmap designer out there, that i can add beautiful
icons and background to the distribution. Don't use too many colors,
try to use the same few already used in the example icons.